--- a/index.html
+++ b/index.html
@@ -21,17 +21,6 @@
 </ul>
 </nav>
 
-<footer>
-<ul class="icons">
-	<li>
-	<ul class="icons">
-		<li><a class="icon  fa-envelope" href="mailto:butaevaz%40ucmail.uc.edu" title="Email"><span class="label">Email</span></a></li>
-		<li><a href="https://scholar.google.ca/citations?user=I-fPUbMAAAAJ&amp;hl=en" title="Researchgate"><span class="label">Google Scholar</span></a></li>
-		<li><a href="https://www.researchgate.net/profile/Almaz-Butaev" id="researchgate" name="researchgate" title="researchgate"><span class="label">ResearchGate</span></a></li>
-	</ul>
-	</li>
-</ul>
-</footer>
 </section>
 <!-- Wrapper -->
 
@@ -45,7 +34,7 @@
 <h2>About me</h2>
 </header>
 
-<p><img alt="" src="/Untitled.png" style="float: left;" />My name is Almaz Butaev and from August 2021 to August 2023 I am a Visiting Assistant Professor at the <a href="https://www.artsci.uc.edu/departments/math.html">Department of Mathematical Science</a>, <a href="https://www.uc.edu/">University of Cincinnati</a>.&nbsp;I received my PhD from <a href="https://www.concordia.ca/">Concordia University (Montr&eacute;al)</a> under the supervision of Professor <a href="https://www.concordia.ca/artsci/math-stats/faculty.html?fpid=galia-dafni">Galia Dafni</a>.&nbsp;Before coming to UC, I was a postdoc at <a href="https://www.ucalgary.ca/">University of Calgary</a>, where my advisor was Professor <a href="https://contacts.ucalgary.ca/info/math/profiles/101-152928">Alex Brudnyi</a>. &nbsp;</p>
+<p><img alt="" src="/Untitled.png" style="float: left;" />My name is Almaz Butaev and I am an Assistant Professor at the <a href="https://www.ufv.ca/math/">Department of Mathematics and Statistics</a>, <a href="https://www.ufv.ca/">University of the Fraser Valley</a>.&nbsp;I received my PhD from <a href="https://www.concordia.ca/">Concordia University (Montr&eacute;al)</a> under the supervision of Professor <a href="https://www.concordia.ca/artsci/math-stats/faculty.html?fpid=galia-dafni">Galia Dafni</a>.&nbsp;Before coming to UC, I was a postdoc at <a href="https://www.ucalgary.ca/">University of Calgary</a>, where my advisor was Professor <a href="https://contacts.ucalgary.ca/info/math/profiles/101-152928">Alex Brudnyi</a>. &nbsp;</p>
 </div>
 </section>
 <!-- Two -->
