--- a/index.html
+++ b/index.html
@@ -87,15 +87,7 @@
 <h3>Teaching</h3>
 
 <section>
-<p>Spring 2023: <a href="https://www.coursicle.com/uc/courses/MATH/1061/">Math 1061: Calculus I</a></p>
-
-<p>Fall 2022:&nbsp;<a href="https://www.coursicle.com/uc/courses/MATH/1008/">Math 1008: Foundations of quantitative reasoning</a>.</p>
-
-<p>Summer 2022: <a href="https://www.coursicle.com/uc/courses/MATH/2073/">Math 2073&nbsp;Ordinary Differential Equations</a></p>
-
-<p>Spring 2022:&nbsp;<a href="https://www.coursicle.com/uc/courses/MATH/1044/">MATH 1044 - Applied Calculus I </a>and&nbsp;<a href="https://www.coursicle.com/uc/courses/MATH/1045/">MATH 1044 - Applied Calculus II</a></p>
-
-<p>Fall 2021:&nbsp;<a href="https://www.coursicle.com/uc/courses/MATH/1026/">MATH 1026 - Pre-Calculus</a> and <a href="https://www.coursicle.com/uc/courses/MATH/1044/">MATH 1044 - Applied Calculus I</a>&nbsp;</p>
+<p>Fall 2023: Math 111: Calculus I  </p>
 </section>
 
 <section></section>
@@ -110,7 +102,7 @@
 <section>
 <p>Here you can find some links to some talks, seminars and conferences&nbsp;</p>
 
-<p><a href="https://sites.google.com/view/ucanalysisandpdeseminar">UC Analysis Seminar</a></p>
+
 
 <p></p>
 </section>
@@ -125,9 +117,9 @@
 <h3>Contact</h3>
 
 <section>
-<p>My office at UC is&nbsp;<strong>5428D</strong><b>, French Hall</b>.</p>
+<p>My office at UFV is&nbsp;<strong>T129</strong><b> on Abbotsford campus</b>.</p>
 
-<p>To contact, please, send me an email at butaevaz&quot;AT&quot;ucmail.uc.edu (e.g. by pressing the&nbsp;✉ button on the right)&nbsp;&nbsp;</p>
+<p>To contact, please, send me an email at Almaz.Butaev&quot;AT&quot;ufv.ca &nbsp;&nbsp;</p>
 </section>
 </div>
 </section>
@@ -138,7 +130,6 @@
 <div class="container">
 <ul class="copyright">
 	<li>&copy; Dr. A. Butaev</li>
-	<li>Design: <a href="//html5up.net">HTML5 UP</a></li>
 </ul>
 </div>
 </section>
