--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 <header class="major">
 <h2></h2>
 
-<h2>About me</h2>
+<h3>Bio </h3>
 </header>
 
-<p><img alt="" src="/Untitled.png" style="float: left;" />My name is Almaz Butaev and I am an Assistant Professor at the <a href="https://www.ufv.ca/math/">Department of Mathematics and Statistics</a>, <a href="https://www.ufv.ca/">University of the Fraser Valley</a>.&nbsp;I received my PhD from <a href="https://www.concordia.ca/">Concordia University (Montr&eacute;al)</a> under the supervision of Professor <a href="https://www.concordia.ca/artsci/math-stats/faculty.html?fpid=galia-dafni">Galia Dafni</a>.&nbsp;Before coming to UC, I was a postdoc at <a href="https://www.ucalgary.ca/">University of Calgary</a>, where my advisor was Professor <a href="https://contacts.ucalgary.ca/info/math/profiles/101-152928">Alex Brudnyi</a>. &nbsp;</p>
+<p><img alt="" src="/Untitled.png" style="float: left;" />I am Almaz Butaev, an Assistant Professor at the <a href="https://www.ufv.ca/math/">Department of Mathematics and Statistics</a>, <a href="https://www.ufv.ca/">University of the Fraser Valley</a>.&nbsp;I received my PhD from <a href="https://www.concordia.ca/">Concordia University (Montr&eacute;al)</a> under the supervision of Professor <a href="https://www.concordia.ca/artsci/math-stats/faculty.html?fpid=galia-dafni">Galia Dafni</a>.&nbsp;Before coming to UFV, I was a postdoc at <a href="https://www.ucalgary.ca/">University of Calgary</a> and a Visiting Professor at <a href="https://www.uc.edu/">University of Cincinnati</a>. &nbsp;</p>
 </div>
 </section>
 <!-- Two -->
@@ -44,7 +44,7 @@
 <h3>Research&nbsp;</h3>
 
 <section>
-<p>My research interests are harmonic analysis, function spaces, Whitney problems and analysis on metric measure spaces.&nbsp;</p>
+<p>My research interests lie in the areas of harmonic analysis, function spaces, analysis on metric measure spaces, Whitney problems and other areas of analysis .&nbsp;</p>
 
 <h3 style="font-style: italic;"><strong>Publications:</strong></h3>
 
@@ -62,12 +62,6 @@
 	<li>Ashurov, R. Butaev, A. <em>On generalized localization of Fourier inversion for distributions. </em>Topics in functional analysis and algebra, 33&ndash;50, <em>Contemp. Math.</em>, 672, Amer. Math. Soc., 2016.</li>
 </ol>
 
-<h4>Manuscripts submitted for publication:</h4>
-
-<ol>
-	<li>Butaev, A<b>.</b>, Dafni, G., <a href="https://arxiv.org/abs/2209.01243">Local vanishing mean oscillation</a></li>
-	<li>Butaev, A<b>.</b>, Dafni, G.,&nbsp;<a href="https://arxiv.org/abs/2101.04587">Locally uniform domains and extension of bmo functions</a>.&nbsp;</li>
-</ol>
 
 <h4>In preparation:</h4>
 
@@ -100,7 +94,9 @@
 <h3>Conferences, Seminars and Talks</h3>
 
 <section>
+<!--
 <p>Here you can find some links to some talks, seminars and conferences&nbsp;</p>
+-->
 
 
 
