--- a/index.html
+++ b/index.html
@@ -1,134 +1,25 @@
-<!DOCTYPE HTML>
-<html>
-<head><meta charset="utf-8">
-	<title>Dr. A. Butaev</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1" /><!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-	<link href="assets/css/main.css" rel="stylesheet" /><!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Home | Your Name</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body><!-- Header -->
-<section id="header">
-<header>
-<h1 id="logo"><a href="./">Dr. A. Butaev</a></h1>
-</header>
-
-<nav id="nav">
-<ul>
-	<li><a class="active" href="#one">About</a></li>
-	<li><a href="#two">Research</a></li>
-	<li><a href="#three">Teaching</a></li>
-	<li><a href="#four">Conferences and Seminar</a></li>
-	<li><a href="#five">Other</a></li>
-</ul>
-</nav>
-
-</section>
-<!-- Wrapper -->
-
-<div id="wrapper"><!-- Main -->
-<div id="main"><!-- One -->
-<section id="one">
-<div class="container">
-<header class="major">
-<h2></h2>
-
-<h3>Bio </h3>
-</header>
-
-<p><img alt="" src="/Untitled.png" style="float: left;" />I am Almaz Butaev, an Assistant Professor at the <a href="https://www.ufv.ca/math/">Department of Mathematics and Statistics</a>, <a href="https://www.ufv.ca/">University of the Fraser Valley</a>.&nbsp;I received my PhD from <a href="https://www.concordia.ca/">Concordia University (Montr&eacute;al)</a> under the supervision of Professor <a href="https://www.concordia.ca/artsci/math-stats/faculty.html?fpid=galia-dafni">Galia Dafni</a>.&nbsp;Before coming to UFV, I was a postdoc at <a href="https://www.ucalgary.ca/">University of Calgary</a> and a Visiting Professor at <a href="https://www.uc.edu/">University of Cincinnati</a>. &nbsp;</p>
-</div>
-</section>
-<!-- Two -->
-
-<section id="two">
-<div class="container">
-<h3>Research&nbsp;</h3>
-
-<section>
-<p>My research interests lie in the areas of harmonic analysis, function spaces, analysis on metric measure spaces, Whitney problems and other areas of analysis .&nbsp;</p>
-
-<h3 style="font-style: italic;"><strong>Publications:</strong></h3>
-
-<ol>
-	<li>Butaev, A., Dafni, G. <a href="https://link.springer.com/article/10.1007/s12220-020-00526-8"><em>Approximation and Extension of Functions of Vanishing Mean Oscillation</em>.</a>&nbsp;J Geom Anal&nbsp;<strong>31</strong>, 6892&ndash;6921 (2021).</li>
-	<li>Brudnyi, A., Butaev A<strong>.</strong> <a href="https://mr.math.ca/article/on-geometric-preduals-of-jet-spaces-on-closed-subsets-of-mathbbf-rn/"><em>On geometric preduals of jet spaces on closed subsets of R<sup>n</sup></em>.</a> C. R. Math. Acad. Sci. Soc. R. Can.<em> </em><strong>42</strong> (2020), no. 1, 10-20</li>
-	<li>Butaev, A. <a href="https://link.springer.com/article/10.1007/s40627-019-0029-1"><em>On the stability of solutions for a family of parabolic equations with time delay on&nbsp;R<sup>n</sup></em></a>. Complex Anal. Synerg.<em> </em><strong>5</strong> (2019), no. 1, 9 pages</li>
-	<li>Butaev, A. <em><a href="https://msp.org/pjm/2019/298-1/pjm-v298-n1-p01-s.pdf">On some refinements of the embedding of critical Sobolev spaces into BMO.</a> </em>Pacific J. Math.<em> </em><strong>298</strong> (2019), no. 1, 1-26</li>
-	<li>Ashurov, R. Butaev, A. <em><a href="https://www.tandfonline.com/doi/abs/10.1080/00036811.2011.601296">On some class of nonseparable continuous wavelet transforms</a>. </em>Appl. Anal. <strong>91</strong> (2012) no. 12, 2257&ndash;2265</li>
-	<li>Butaev, A. <a href="https://www.sciencedirect.com/science/article/pii/S0893965911004721"><em>On multiple Fourier integrals of piecewise smooth functions with discontinuities of the second kind</em>.</a> Appl. Math. Lett<em>.</em> <strong>25</strong> (2012), no. 3, 567&ndash;570</li>
-	<li>Ashurov, R. Butaev, A. Pradhan, B. <em><a href="https://www.hindawi.com/journals/aaa/2012/649848/">On generalized localization of Fourier inversion associated with an elliptic operator for distributions</a>.</em> Abstr. Appl. Anal. (2012) ID 649848 13 pages</li>
-	<li>Ashurov, R. Butaev, A. <a href="https://www.sciencedirect.com/science/article/pii/S0893965911001601"><em>On continuous wavelet transforms of distributions</em>.</a><em> </em>Appl. Math. Lett.<em> </em><strong>24</strong> (2011) no. 9, 1578&ndash;1583</li>
-	<li>Ashurov, R. Butaev, A. <a href="https://www.sciencedirect.com/science/article/pii/S1631073X10002268"><em>The Kahane theorem for nonspherical partial sums of Fourier integrals</em>. </a>C. R. Math. Acad. Sci. Paris <strong>348</strong> (2010), no. 19-20, 1103&ndash;1106</li>
-	<li>Ashurov, R. Butaev, A. <em><a href="https://link.springer.com/article/10.1007/s00041-010-9124-7">On the Pinsky phenomenon.</a> </em>J. Fourier Anal. Appl. <strong>16</strong> (2010), no. 5, 804&ndash;812.</li>
-	<li>Ashurov, R. Butaev, A. <em>On generalized localization of Fourier inversion for distributions. </em>Topics in functional analysis and algebra, 33&ndash;50, <em>Contemp. Math.</em>, 672, Amer. Math. Soc., 2016.</li>
-</ol>
-
-
-<h4>In preparation:</h4>
-
-<ol>
-	<li>Brudnyi, A., Butaev, A. Traces of Lipschitz spaces on a Riemannian manifold&nbsp;</li>
-	<li>Butaev, A.,&nbsp;Liang, L.,&nbsp;Shanmugalingam, N.,&nbsp;Dirichlet form on metric measure spaces and graph approximations.</li>
-</ol>
-
-<p></p>
-</section>
-</div>
-</section>
-<!-- Three -->
-
-<section id="three">
-<div class="container">
-<h3>Teaching</h3>
-
-<section>
-<p>Fall 2023: Math 111: Calculus I  </p>
-</section>
-
-<section></section>
-</div>
-</section>
-<!-- Four -->
-
-<section id="four">
-<div class="container">
-<h3>Conferences, Seminars and Talks</h3>
-
-<section>
-<!--
-<p>Here you can find some links to some talks, seminars and conferences&nbsp;</p>
--->
-
-
-
-<p></p>
-</section>
-
-<section></section>
-</div>
-</section>
-<!-- Five -->
-
-<section id="five">
-<div class="container">
-<h3>Contact</h3>
-
-<section>
-<p>My office at UFV is&nbsp;<strong>T129</strong><b> on Abbotsford campus</b>.</p>
-
-<p>To contact, please, send me an email at Almaz.Butaev&quot;AT&quot;ufv.ca &nbsp;&nbsp;</p>
-</section>
-</div>
-</section>
-</div>
-<!-- Footer -->
-
-<section id="footer">
-<div class="container">
-<ul class="copyright">
-	<li>&copy; Dr. A. Butaev</li>
-</ul>
-</div>
-</section>
-</div>
-<!-- Scripts --><script src="assets/js/jquery.min.js"></script><script src="assets/js/jquery.scrollzer.min.js"></script><script src="assets/js/jquery.scrolly.min.js"></script><script src="assets/js/skel.min.js"></script><script src="assets/js/util.js"></script><!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]--><script src="assets/js/main.js"></script></body>
+<body>
+  <header>
+    <h1>Your Name</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="research.html">Research</a>
+      <a href="teaching.html">Teaching</a>
+      <a href="publications.html">Publications & Talks</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+  <main>
+    <h2>Welcome!</h2>
+    <p>This is the homepage of [Your Name], a [your role/title].</p>
+  </main>
+</body>
 </html>
+
