--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
   <main>
     <h2>Welcome!</h2>
-    <p>This is the homepage of [Your Name], a [your role/title].</p>
+    <p>This is the homepage of Almaz Butaev, an Assistant Professor at University of the Fraser Valley.</p>
   </main>
 </body>
 </html>
