--- a/contact.html
+++ b/contact.html
@@ -17,8 +17,23 @@
     </nav>
   </header>
   <main>
-    <h2>Research Interests</h2>
-    <p>Describe your research areas, projects, and collaborations here.</p>
+    <h2>Contact</h2>
+    <p>You can reach me through the following channels:</p>
+
+    <h3>Email</h3>
+    <p><a href="mailto:your.email@example.com">your.email@example.com</a></p>
+
+    <h3>Phone</h3>
+    <p>+1 (123) 456-7890</p>
+
+    <h3>Address</h3>
+    <p>
+      Department of [Your Department] <br>
+      [Your University or Institution] <br>
+      123 Academic Lane <br>
+      City, State ZIP <br>
+      Country
+    </p>
   </main>
 </body>
 </html>
