--- a/contact.html
+++ b/contact.html
@@ -21,18 +21,18 @@
     <p>You can reach me through the following channels:</p>
 
     <h3>Email</h3>
-    <p><a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <p><a href="mailto:almaz.butaev@ufv.ca">almaz.butaev@ufv.ca</a></p>
 
     <h3>Phone</h3>
-    <p>+1 (123) 456-7890</p>
+    <p>+1 (604)-504-7441 ext.4452 </p>
 
     <h3>Address</h3>
     <p>
-      Department of [Your Department] <br>
-      [Your University or Institution] <br>
-      123 Academic Lane <br>
-      City, State ZIP <br>
-      Country
+      Department of Mathematics & Statistics <br>
+      University of the Fraser Valley <br>
+      33844 King Road,  Abbotsford, BC <br>
+      Canada V2S 7M8 <br>
+      
     </p>
   </main>
 </body>
