--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Home | Your Name</title>
+  <title>Home | Almaz Butaev</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
+    <h1>Almaz Butaev</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="research.html">Research</a>
