--- a/publications.html
+++ b/publications.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Research | Your Name</title>
+  <title>Research | Almaz Butaev</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
+    <h1>Almaz Butaev</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="research.html">Research</a>
@@ -17,8 +17,47 @@
     </nav>
   </header>
   <main>
-    <h2>Research Interests</h2>
-    <p>Describe your research areas, projects, and collaborations here.</p>
+    <h2>Publications</h2>
+
+    <ol>
+      <li>
+        <strong>Your Name</strong>, Coauthor Name. 
+        <em>Title of the Paper</em>. 
+        Journal Name, Vol. XX, No. XX, pp. XX–XX, Year. 
+        <a href="https://doi.org/your-doi" target="_blank">[DOI]</a>
+      </li>
+
+      <li>
+        Coauthor Name, <strong>Your Name</strong>. 
+        <em>Another Paper Title</em>. 
+        Conference Proceedings of XYZ Conference, Year. 
+        <a href="https://link.to.paper.com" target="_blank">[PDF]</a>
+      </li>
+
+      <li>
+        <strong>Your Name</strong>. 
+        <em>Solo Author Paper</em>. 
+        Working paper or preprint. 
+        <a href="https://arxiv.org/abs/xxxx.xxxxx" target="_blank">[arXiv]</a>
+      </li>
+    </ol>
+
+    <h2>Talks & Presentations</h2>
+
+    <ul>
+      <li>
+        <strong>Invited Talk:</strong> "Topic Title", Institution/Conference Name, Month Year.
+      </li>
+      <li>
+        <strong>Conference Presentation:</strong> "Title of the Presentation", XYZ Annual Meeting, Year.
+      </li>
+      <li>
+        <strong>Guest Lecture:</strong> "Special Topic", Department of ABC, University Name, Year.
+      </li>
+    </ul>
+    
+
+    
   </main>
 </body>
 </html>
