--- a/teaching.html
+++ b/teaching.html
@@ -17,8 +17,14 @@
     </nav>
   </header>
   <main>
-    <h2>Research Interests</h2>
-    <p>Describe your research areas, projects, and collaborations here.</p>
+    <h2>Teaching</h2>
+    <h3>Fall 2024</h3>
+    <ul>
+      <li><strong>CS101 – Introduction to Computer Science</strong>  
+        <br>Undergraduate course, Instructor</li>
+      <li><strong>CS550 – Machine Learning</strong>  
+        <br>Graduate course, Teaching Assistant</li>
+    </ul>
   </main>
 </body>
 </html>
