--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,8 @@
     <h3>Email</h3>
     <p><a href="mailto:almaz.butaev@ufv.ca">almaz.butaev@ufv.ca</a></p>
 
-    <h3>Phone</h3>
-    <p>+1 (604)-504-7441 ext.4452 </p>
 
-    <h3>Address</h3>
+    <h3>Mailing Address</h3>
     <p>
       Department of Mathematics & Statistics <br>
       University of the Fraser Valley <br>
