--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,8 @@
     <p>You can reach me through the following channels:</p>
 
     <h3>Email</h3>
-    <p><a href="mailto:almaz.butaev@ufv.ca">almaz.butaev@ufv.ca</a></p>
+    <p> almaz"dot"butaev"at"ufv"dot"ca</p>
+      
 
 
     <h3>Mailing Address</h3>
