--- a/index.html
+++ b/index.html
@@ -17,8 +17,13 @@
     </nav>
   </header>
   <main>
-    <h2>Welcome!</h2>
-    <p>This is the homepage of Almaz Butaev, an Assistant Professor at University of the Fraser Valley.</p>
+    <h2>Hi!</h2>
+    <p> I am Almaz Butaev, an assistant professor at 
+      <a href="https://www.ufv.ca/math/">the Department of Mathematics and Statistics</a>, 
+      <a href="https://www.ufv.ca/">University of the Fraser Valley</a>.
+    </p>
+    <p> My research interests lie in Fourier analysis, function spaces, analysis on metric measure spaces and related areas.
+    </p>
   </main>
 </body>
 </html>
