--- a/research.html
+++ b/research.html
@@ -18,7 +18,10 @@
   </header>
   <main>
     <h2>Research Interests</h2>
-    <p>Describe your research areas, projects, and collaborations here.</p>
+    <p>Below are some projects I am currently working on. There research activities are generously supported by 
+      <a href="https://www.nserc-crsng.gc.ca/index_eng.asp">NSERC</a>.
+      </p>
+    <h3>Smooth BMO functions on metric measure spaces</h3>
   </main>
 </body>
 </html>
