--- a/publications.html
+++ b/publications.html
@@ -18,7 +18,7 @@
   </header>
   <main>
     <h2>Publications</h2>
-
+<!-- COMMENTING STARTS
     <ol>
       <li>
         <strong>Your Name</strong>, Coauthor Name. 
@@ -56,7 +56,7 @@
       </li>
     </ul>
     
-
+ -->
     
   </main>
 </body>
