--- a/teaching.html
+++ b/teaching.html
@@ -18,12 +18,12 @@
   </header>
   <main>
     <h2>Teaching</h2>
-    <h3>Fall 2024</h3>
+    <h3>Summer 2025</h3>
     <ul>
-      <li><strong>CS101 – Introduction to Computer Science</strong>  
-        <br>Undergraduate course, Instructor</li>
-      <li><strong>CS550 – Machine Learning</strong>  
+      <li><strong>Math 111 – Calculus I </strong>  </li>
+      <!-- <li><strong>CS550 – Machine Learning</strong>  
         <br>Graduate course, Teaching Assistant</li>
+      -->
     </ul>
   </main>
 </body>
