--- a/research.html
+++ b/research.html
@@ -21,7 +21,7 @@
     <p>Below are some projects I am currently working on. There research activities are generously supported by 
       <a href="https://www.nserc-crsng.gc.ca/index_eng.asp">NSERC</a>.
       </p>
-    <h3>Smooth BMO functions on metric measure spaces</h3>
+    <h3>Subspaces of BMO on metric measure spaces</h3>
   </main>
 </body>
 </html>
