--- a/teaching.html
+++ b/teaching.html
@@ -25,6 +25,11 @@
         <br>Graduate course, Teaching Assistant</li>
       -->
     </ul>
+    <h3>Fall 2025</h3>
+    <ul>
+      <li><strong>Math 141 – Business Calculus </strong>  </li>
+      <li><strong>Math 340 – Introduction to Analysis </strong>  </li>
+    </ul>
   </main>
 </body>
 </html>
