--- a/publications.html
+++ b/publications.html
@@ -18,7 +18,21 @@
   </header>
   <main>
     <h2>Publications</h2>
+    <ol>
+      <li>
+        Butaev A., Luo L and Shanmugalingam N. 
+        <em>Construction of a Dirichlet form on metric measure spaces of controlled geometry.</em>. 
+        Potential Analysis,
+        Vol. 62, 
+        No. 3, 
+        pp. 485-508, 
+        (2025) 
+        <a href="https://doi.org/10.1007/s11118-024-10144-6">[DOI]</a>
+      </li>
+    </ol>
 <!-- COMMENTING STARTS
+    Butaev, Almaz, Liangbing Luo, and Nageswari Shanmugalingam. 
+    "Construction of a Dirichlet form on metric measure spaces of controlled geometry." Potential Analysis 62.3 (2025): 485-508.
     <ol>
       <li>
         <strong>Your Name</strong>, Coauthor Name. 
