--- a/publications.html
+++ b/publications.html
@@ -17,7 +17,7 @@
     </nav>
   </header>
   <main>
-    <h2>Publications</h2>
+    <h2>Recent publications</h2>
     <ol>
       <li>
         Butaev A., Luo L and Shanmugalingam N. 
@@ -29,6 +29,27 @@
         (2025) 
         <a href="https://doi.org/10.1007/s11118-024-10144-6">[DOI]</a>
       </li>
+      <li>
+        Butaev A., and Dafni G. 
+        <em>Local vanishing mean oscillation.</em>. 
+        Bulletin de la Société Mathématique de France,
+        Vol. 151, 
+        No. 3, 
+        pp. 541-564, 
+        (2023) 
+        <a href="https://doi.org/10.24033/bsmf.2876">[DOI]</a>
+      </li>
+      <li>
+        Butaev A., and Dafni G. 
+        <em>Locally uniform domains and extension of bmo functions.</em>. 
+        Annales Fennici Mathematici,
+        Vol. 48, 
+        No. 2, 
+        pp. 567-594, 
+        (2023) 
+        <a href="https://doi.org/10.54330/afm.132002 ">[DOI]</a>
+      </li>
+      
     </ol>
 <!-- COMMENTING STARTS
     Butaev, Almaz, Liangbing Luo, and Nageswari Shanmugalingam. 
