--- a/publications.html
+++ b/publications.html
@@ -51,6 +51,15 @@
       </li>
       
     </ol>
+
+  <h2>Talks & Presentations</h2>
+
+    <ul>
+      <li>
+        <strong>2025 CMS Summer Meeting</strong> "Discrete Dirichlet forms on a regular metric measure space", Université Laval, 2025.
+      </li>
+    </ul>
+    
 <!-- COMMENTING STARTS
     Butaev, Almaz, Liangbing Luo, and Nageswari Shanmugalingam. 
     "Construction of a Dirichlet form on metric measure spaces of controlled geometry." Potential Analysis 62.3 (2025): 485-508.
