--- a/research.html
+++ b/research.html
@@ -18,9 +18,9 @@
   </header>
   <main>
     <h2>Research Interests</h2>
-    <p>Below are some projects I am currently working on. There research activities are generously supported by 
-      <a href="https://www.nserc-crsng.gc.ca/index_eng.asp">NSERC</a>.
-      </p>
+    <p>Below are some projects I am currently working on. </p>
+    <p>There research activities are generously supported by 
+      <a href="https://www.nserc-crsng.gc.ca/index_eng.asp">NSERC</a>.</p>
     <h3>Subspaces of BMO on metric measure spaces</h3>
   </main>
 </body>
