--- a/publications.html
+++ b/publications.html
@@ -56,7 +56,8 @@
 
     <ul>
       <li>
-        <strong>2025 CMS Summer Meeting</strong> "Discrete Dirichlet forms on a regular metric measure space", Université Laval, 2025.
+        <strong>Conference Presentation</strong> "Discrete Dirichlet forms on a regular metric measure space", 
+        2025 CMS Summer Meeting at Université Laval, 2025.
       </li>
     </ul>
     
