--- a/publications.html
+++ b/publications.html
@@ -57,7 +57,7 @@
     <ul>
       <li>
         <strong>Conference Presentation</strong> "Discrete Dirichlet forms on a regular metric measure space", 
-        2025 CMS Summer Meeting at Université Laval, 2025.
+        2025 CMS Summer Meeting at Université Laval.
       </li>
     </ul>
     
