--- a/research.html
+++ b/research.html
@@ -18,10 +18,11 @@
   </header>
   <main>
     <h2>Research Interests</h2>
-    <p>Below are some projects I am currently working on. </p>
-    <p>There research activities are generously supported by 
-      <a href="https://www.nserc-crsng.gc.ca/index_eng.asp">NSERC</a>.</p>
-    <h3>Subspaces of BMO on metric measure spaces</h3>
+    <p>My recent interest work is concerned with:  </p>
+    <ul>
+      <li> space of functions of bounded mean oscillation and its subspaces </li>
+      <li> analysis on metric measure spaces </li>
+    </ul>
   </main>
 </body>
 </html>
