--- a/research.html
+++ b/research.html
@@ -23,6 +23,15 @@
       <li> space of functions of bounded mean oscillation and its subspaces </li>
       <li> analysis on metric measure spaces </li>
     </ul>
+
+    <p>
+    If you are a second-year or higher UFV student interested to gain experience with math research, you are welcome to 
+    reach out to discuss possible research opportunities. 
+    Participating in a research project can strengthen your resume, especially if you are considering graduate studies.
+    It can also help you to decide a future career path.
+    </p>
+
+
   </main>
 </body>
 </html>
