--- a/research.html
+++ b/research.html
@@ -23,12 +23,21 @@
       <li> space of functions of bounded mean oscillation and its subspaces </li>
       <li> analysis on metric measure spaces </li>
     </ul>
-
+    <h2> For UFV students </h2>
     <p>
     If you are a second-year or higher UFV student interested to gain experience with math research, you are welcome to 
     reach out to discuss possible research opportunities. 
     Participating in a research project can strengthen your resume, especially if you are considering graduate studies.
-    It can also help you to decide a future career path.
+    It can also help you to decide a future career path. 
+    </p>
+
+    <p>
+      My research is supported by NSERC, so I can supervise Undergraduate Student Research Award (USRA) holders. 
+      If you plan to apply to USRA for Summer 2026, check 
+      <a href="https://www.ufv.ca/research/students/awards-and-funding/nserc-undergraduate-student-research-award/" target="_blank">
+        the UFV Awards page 
+      </a>
+      and contact me.  
     </p>
 
 
