--- a/research.html
+++ b/research.html
@@ -18,7 +18,7 @@
   </header>
   <main>
     <h2>Research Interests</h2>
-    <p>My recent interest work is concerned with:  </p>
+    <p>My recent work is concerned with:  </p>
     <ul>
       <li> space of functions of bounded mean oscillation and its subspaces </li>
       <li> analysis on metric measure spaces </li>
