--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main>
     <h2>Hi!</h2>
     <p> I am Almaz Butaev, an assistant professor at 
-      <a href="https://www.ufv.ca/math/">the Department of Mathematics and Statistics</a>, 
+      <a href="https://www.ufv.ca/math/contact-us/faculty/">the Department of Mathematics and Statistics</a>, 
       <a href="https://www.ufv.ca/">University of the Fraser Valley</a>.
     </p>
     <p> My research interests lie in Fourier analysis, function spaces, analysis on metric measure spaces and related areas.
