--- a/publications.html
+++ b/publications.html
@@ -49,8 +49,10 @@
         (2023) 
         <a href="https://doi.org/10.54330/afm.132002 ">[DOI]</a>
       </li>
-      
     </ol>
+
+    An expanded list of publications is available through <a href="https://scholar.google.com/citations?hl=en&user=I-fPUbMAAAAJ&sortby=pubdate&view_op=list_works&gmla=AH8HC4ycJbYQ0xg5ZKOVcNyd0WRdDzdma8d_YhBD2Y1wO6nFM7MiXsjPMHSlieEUHbYasnZih9R1">[Google Scholar]</a>
+    
 
   <h2>Talks & Presentations</h2>
 
