--- a/publications.html
+++ b/publications.html
@@ -51,7 +51,7 @@
       </li>
     </ol>
 
-    An expanded list of publications is available through <a href="https://scholar.google.com/citations?hl=en&user=I-fPUbMAAAAJ&sortby=pubdate&view_op=list_works&gmla=AH8HC4ycJbYQ0xg5ZKOVcNyd0WRdDzdma8d_YhBD2Y1wO6nFM7MiXsjPMHSlieEUHbYasnZih9R1">[Google Scholar]</a>
+    An expanded list of publications is available through <a href="https://scholar.google.com/citations?user=I-fPUbMAAAAJ&hl=en&oi=ao">[Google Scholar]</a>
     
 
   <h2>Talks & Presentations</h2>
