--- a/publications.html
+++ b/publications.html
@@ -51,7 +51,7 @@
       </li>
     </ol>
 
-    An expanded list of publications is available through <a href="https://scholar.google.com/citations?user=I-fPUbMAAAAJ&hl=en&oi=ao">[Google Scholar]</a>
+    An expanded list of publications is available through <a href="https://scholar.google.com/citations?user=I-fPUbMAAAAJ&hl=en&oi=ao">Google Scholar</a>
     
 
   <h2>Talks & Presentations</h2>
