--- a/teaching.html
+++ b/teaching.html
@@ -17,8 +17,8 @@
     </nav>
   </header>
   <main>
-    <h2>Teaching</h2>
     <!-- 
+    <h2>Teaching</h2>
     <h3>Summer 2025</h3>
     <ul>
       <li><strong>Math 111 – Calculus I </strong>  </li>
@@ -29,6 +29,7 @@
       <li><strong>Math 141 – Business Calculus </strong>  </li>
       <li><strong>Math 340 – Introduction to Analysis </strong>  </li>
     </ul>
+    Course materials can be accessed by UFV students via  <a href="https://brightspace.ufv.ca/d2l/login"> BrightSpace </a> 
   </main>
 </body>
 </html>
