--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
   </header>
   <main>
     
-    <p>My UFV office is at T129, and can be reached through the following channels:</p>
+    <p>My UFV office is T129, and can be reached through the following channels:</p>
 
     <h3>Contact info</h3>
     <p> Phone : 604-504-7441 ext. 4452 </p> 
