--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
   <main>
     <div class="intro-section">
-    <img src="photo.jpg" alt="Photo" class="profile-pic">
+    <img src="images/photo.jpg" alt="Photo" class="profile-pic">
     
     <div class="intro-text">
       <h2>Hi!</h2>
