--- a/publications.html
+++ b/publications.html
@@ -69,6 +69,10 @@
 
     <ul>
       <li>
+        <strong>Conference Presentation</strong> Upcoming talk at  
+        2025 CMS Winter Meeting in Toronto. 
+      </li>
+      <li>
         <strong>Conference Presentation</strong> "Discrete Dirichlet forms on a regular metric measure space", 
         2025 CMS Summer Meeting at Université Laval.
       </li>
