--- a/publications.html
+++ b/publications.html
@@ -69,7 +69,7 @@
 
     <ul>
       <li>
-        <strong>Conference Presentation</strong> Upcoming talk at  
+        <strong>Upcoming talk </strong> at  
         2025 CMS Winter Meeting in Toronto. 
       </li>
       <li>
